src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__kotlin_multiple_args.snap
---
source: src/metrics/nargs.rs
expression: metric.nargs
---
{
  "function_args": 3,
  "closure_args": 0,
  "function_args_average": 3.0,
  "closure_args_average": 0.0,
  "total": 3,
  "average": 3.0,
  "function_args_min": 0,
  "function_args_max": 3,
  "closure_args_min": 0,
  "closure_args_max": 0
}
