src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__kotlin_single_arg.snap
---
source: src/metrics/nargs.rs
expression: metric.nargs
---
{
  "function_args": 1,
  "closure_args": 0,
  "function_args_average": 1.0,
  "closure_args_average": 0.0,
  "total": 1,
  "value": 0,
  "average": 1.0,
  "function_args_min": 0,
  "function_args_max": 1,
  "closure_args_min": 0,
  "closure_args_max": 0
}
