src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__lua_colon_method_nargs.snap
---
source: src/metrics/nargs.rs
expression: metric.nargs
---
{
  "function_args": 2,
  "closure_args": 0,
  "function_args_average": 2.0,
  "closure_args_average": 0.0,
  "total": 2,
  "value": 0,
  "average": 2.0,
  "function_args_min": 0,
  "function_args_max": 2,
  "closure_args_min": 0,
  "closure_args_max": 0
}
