src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__lua_no_functions_and_closures.snap
---
source: src/metrics/nargs.rs
expression: metric.nargs
---
{
  "function_args": 0,
  "closure_args": 0,
  "function_args_average": 0.0,
  "closure_args_average": 0.0,
  "total": 0,
  "value": 0,
  "average": 0.0,
  "function_args_min": 0,
  "function_args_max": 0,
  "closure_args_min": 0,
  "closure_args_max": 0
}
