src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__lua_single_closure.snap
---
source: src/metrics/nargs.rs
expression: metric.nargs
---
{
  "function_args": 0,
  "closure_args": 2,
  "function_args_average": 0.0,
  "closure_args_average": 2.0,
  "total": 2,
  "value": 0,
  "average": 2.0,
  "function_args_min": 0,
  "function_args_max": 0,
  "closure_args_min": 0,
  "closure_args_max": 2
}
