src/metrics/snapshots/big_code_analysis__metrics__nargs__tests__lua_single_function.snap
---
source: src/metrics/nargs.rs
assertion_line: 1704
expression: metric.nargs
---
{
  "total_functions": 2.0,
  "total_closures": 0.0,
  "average_functions": 2.0,
  "average_closures": 0.0,
  "total": 2.0,
  "average": 2.0,
  "functions_min": 0.0,
  "functions_max": 2.0,
  "closures_min": 0.0,
  "closures_max": 0.0
}
